--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
  <div class="glitch-wrapper">
  
-<div class="glitch" data-text="LEAVE ME ALONE!">Welcome Kidz~<br>Ganest Seven
+<div class="glitch" data-text="Alivos7">Welcome Kidz~<br>Ganest Seven
 
 
 <iframe frameborder="0" height="1" width="1" loop="true" allow="autoplay" src="https://i.top4top.io/m_20960vgds0.mp3"></iframe>
